# sealcash

./: .gitignore  README.md  bos-docs.md  charms.md
charms/: Cargo.toml
charms/spells/: mint-nft.yaml  mint-token.yaml
charms/src/: lib.rs  main.rs
client/: .env.example  index.html  package.json  svelte.config.js  tsconfig.app.json  tsconfig.json  vite.config.ts
client/src/: App.svelte  app.css
client/src/components/: EscrowForm.svelte  EscrowList.svelte  Hero.svelte  InboxDropdown.svelte  InvitePage.svelte  NetworkToggle.svelte  WalletButton.svelte
client/src/lib/: api.ts  wallet.ts
client/src/stores/: escrow.ts  wallet.ts
server/: .env.example  package.json  tsconfig.json
server/src/: app.ts
server/src/api/: auth.routes.ts  escrow.routes.ts  user.routes.ts
server/src/auth/: auth.service.ts
server/src/config/: database.ts  env.ts
server/src/models/: models.ts
server/src/services/: bitcoin.service.ts  blockchain.service.ts  charms.service.ts  escrow.service.ts  user.service.ts
