[package]
name = "seal"
description = "SEAL escrow contract for SealCash"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
charms-sdk = { version = "0.10.0" }
serde = { version = "1.0", features = ["derive"] }
sha2 = { version = "0.10.9" }
hex = { version = "0.4" }

[dev-dependencies]
serde_json = { version = "1.0" }

[profile.release]
lto = "fat"
codegen-units = 1
strip = "symbols"
panic = "abort"
overflow-checks = true
